--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'cloud.piranha.webapp:piranha-webapp-webservlet:20.5.0'
+    compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	//JSP 추가 시작
